# sublime-from-cfg

./: .gitignore  LICENSE  README.md  bnf.py  parse_sbnf.py  pyproject.toml  run_tests_local.sh  setup.cfg  simplify_grammar.py  sublime_from_cfg.py  sublime_generator.py  test-output.sublime-syntax  test.py  test_parser.py  test_sublime_generator.py  transform_grammar.py
.github/workflows/: test.yml
sbnf/: README.md  sbnf-modified.sbnf  sbnf-modified.sublime-syntax  sbnf.sublime-syntax
sublime_from_cfg/: __init__.py  bnf.py  cli.py  parse_sbnf.py  sublime_generator.py  transform_grammar.py  types.py
test_scripts/: test-output.sublime-syntax  test_parser.py  test_sublime_generator.py
tests/embed/: embed.sbnf  syntax_test_embed.test
tests/include/: include.sbnf  included.sbnf  syntax_test_include.test
tests/no_prototype/: no_prototype.sbnf  syntax_test_no_prototype.test
tests/non_ll/: non_ll.sbnf  syntax_test_non_ll.test
tests/params/: params.sbnf  syntax_test_params.test
tests/prototype/: prototype.sbnf  syntax_test_prototype.test
tests/rule_params/: rule_params.sbnf  syntax_test_rule_params.test
tests/skip_whitespace/: skip_whitespace.sbnf  syntax_test_skip_whitespace.test
tests/sort/: sort.sbnf  syntax_test_sort.test
