[metadata]
name = sublime-from-cfg
version = 0.2.0
author = Haggai Nuchi
author_email = haggai@haggainuchi.com
url = https://github.com/nuchi/sublime-from-cfg
description = Generate a Sublime Text syntax definition for a context-free grammar
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
keywords = sublime text, context-free grammar, sbnf, bnf
license = MIT

[options]
install_requires =
    sly >= 0.4
    ruamel.yaml >= 0.17.17

packages = sublime_from_cfg

[options.entry_points]
console_scripts =
    sublime-from-cfg = sublime_from_cfg.cli:main

setup_requires =
    setuptools >= 58.0.4

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
